welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:10: error: type mismatch;
 found   : Unit
 required: Int
  if(ok==0){
  ^